{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 149,
  "lineage": "5c0d2f6d-2d49-349d-16c1-0dddf0bf4074",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-0",
            "internal_domain_name_suffix": "00jjtiwvpnaela2da2u1pbtyec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "NicConfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-0",
                "subnet_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope/subnets/snet-ctest27-dev-westeurope"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BB-37-37",
            "name": "nic-ctest27-dev-westeurope-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Compute/virtualMachines/vm-ctest27-dev-westeurope-0"
          },
          "dependencies": [
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-1",
            "internal_domain_name_suffix": "00jjtiwvpnaela2da2u1pbtyec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "NicConfig",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-1",
                "subnet_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope/subnets/snet-ctest27-dev-westeurope"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AB-12-93",
            "name": "nic-ctest27-dev-westeurope-1",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Compute/virtualMachines/vm-ctest27-dev-westeurope-1"
          },
          "dependencies": [
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-2",
            "internal_domain_name_suffix": "00jjtiwvpnaela2da2u1pbtyec.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "NicConfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-2",
                "subnet_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope/subnets/snet-ctest27-dev-westeurope"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BC-1A-BB",
            "name": "nic-ctest27-dev-westeurope-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Compute/virtualMachines/vm-ctest27-dev-westeurope-2"
          },
          "dependencies": [
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-0|/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope",
            "network_interface_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-0",
            "network_security_group_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope"
          },
          "dependencies": [
            "azurerm_network_interface.tfub_nic",
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-1|/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope",
            "network_interface_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-1",
            "network_security_group_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope"
          },
          "dependencies": [
            "azurerm_network_interface.tfub_nic",
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-2|/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope",
            "network_interface_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkInterfaces/nic-ctest27-dev-westeurope-2",
            "network_security_group_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope"
          },
          "dependencies": [
            "azurerm_network_interface.tfub_nic",
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfub_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope",
            "location": "westeurope",
            "name": "nsg-ctest27-dev-westeurope",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgr-icmp",
                "priority": 1102,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgr-SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope/securityRules/nsgr-icmp",
            "name": "nsgr-icmp",
            "network_security_group_name": "nsg-ctest27-dev-westeurope",
            "priority": 1102,
            "protocol": "Icmp",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/networkSecurityGroups/nsg-ctest27-dev-westeurope/securityRules/nsgr-SSH",
            "name": "nsgr-SSH",
            "network_security_group_name": "nsg-ctest27-dev-westeurope",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfub_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ctest27-uuizdp-0",
            "fqdn": "ctest27-uuizdp-0.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.0.100",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-ctest27-dev-westeurope-0",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ctest27-uuizdp-1",
            "fqdn": "ctest27-uuizdp-1.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.0.92",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-ctest27-dev-westeurope-1",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.rnd"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ctest27-uuizdp-2",
            "fqdn": "ctest27-uuizdp-2.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/publicIPAddresses/pip-ctest27-dev-westeurope-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.0.211",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-ctest27-dev-westeurope-2",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope/subnets/snet-ctest27-dev-westeurope",
            "name": "snet-ctest27-dev-westeurope",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "virtual_network_name": "vnet-ctest27-dev-westeurope"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.tfub_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfub_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a29992d6-7bd5-4540-8383-0729b7867822",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope",
            "location": "westeurope",
            "name": "vnet-ctest27-dev-westeurope",
            "resource_group_name": "rg-ctest27-dev-westeurope",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ctest27-dev-westeurope/providers/Microsoft.Network/virtualNetworks/vnet-ctest27-dev-westeurope/subnets/snet-ctest27-dev-westeurope",
                "name": "snet-ctest27-dev-westeurope"
              }
            ],
            "tags": {
              "ApplicationName": "ctest27",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}